--- a/TestResults/index.html
+++ b/TestResults/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">01-09-2023 10:57:24</span>
+                    <span class="badge badge-primary">04-09-2023 12:34:05</span>
                 </a>
             </li>
         </ul>
@@ -119,8 +119,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">Login to OrangeHRM</p> 
-								<p class="duration text-sm">0h:1m:58s+490ms</p> 
-								<span class="datetime">10:57:24 AM</span>
+								<p class="duration text-sm">0h:2m:10s+690ms</p> 
+								<span class="datetime">12:34:06 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -128,9 +128,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">Login to OrangeHRM</h5>
-										<span class='badge badge-success'>01-09-2023 10:57:24</span>
-										<span class='badge badge-danger'>01-09-2023 10:59:22</span>
-										<span class='badge badge-default'>0h:1m:58s+490ms</span>
+										<span class='badge badge-success'>04-09-2023 12:34:06</span>
+										<span class='badge badge-danger'>04-09-2023 12:36:16</span>
+										<span class='badge badge-default'>0h:2m:10s+690ms</span>
 									</div>
 																	</div>
 							</div>
@@ -311,7 +311,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">01-09-2023 10:57:24</h6>
+							<h6 class="font-weight-light">04-09-2023 12:34:05</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -327,7 +327,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:01:58.6312645</h6>
+							<h6 class="font-weight-light">00:02:10.8828178</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
